--- a/pwa/package.json
+++ b/pwa/package.json
@@ -12,6 +12,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-scripts": "5.0.1",
+    "seqviz": "^3.10.9",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
